# cppxq

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
src/: Pybind.cpp  Pybind.hpp  board.cpp  board.hpp  board_utils.cpp  board_utils.hpp  common.cpp  common.hpp  hash_num.hpp  move_maps.hpp  pybind_module.cpp  rule2022.cpp  rule2022.hpp  temp.cpp  test_board.cpp  test_board_basic.cpp  test_board_utils.cpp  test_cases.hpp  test_common.cpp  test_helper.hpp  test_mark_2022.cpp  test_mark_2022_plus.cpp  test_mark_utils.cpp  test_node.cpp  test_rule_chi.cpp  test_rule_jdz.cpp  test_rule_sha.cpp  test_rule_utils.cpp  test_symmetry.cpp  test_temp.cpp  test_utils.cpp  test_xboard.cpp  utils.hpp  xqboard.cpp  xqboard.hpp
tests/: test_xqboard.py
